--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "prajwal",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Prajwala4545.github.io/portfolio",
+  "homepage": "https://prajwal4545.github.io/portfolio",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -18,9 +18,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "gh-pages": "^6.1.1"
+    "tailwindcss": "^3.4.17"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,10 +35,6 @@
   },
   "browserslist": {
     "production": [">0.2%", "not dead", "not op_mini all"],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   }
 }
